--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,15 @@
 @import '../bower_components/bootstrap/dist/css/bootstrap.css';
+
+#navigation {
+  position: fixed;
+}
+
+#hero {
+  width: 100%;
+  padding: 10%;
+  background: #444;
+  display: table;
+}
+
+#hero-content {
+}
