Fixing GFMV-11 and adding footer with link to privacy policy page on home page.

--- a/styles/main.css
+++ b/styles/main.css
@@ -179,3 +179,9 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+#footer {
+  background: #222;
+  color: white;
+  padding: 15px;
+}
