--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,5 @@
 /* bower:css */
 @import '../bower_components/bootstrap/dist/css/bootstrap.css';
-@import '../bower_components/slick-carousel/slick/slick.css';
-@import '../bower_components/slick-carousel/slick/slick-theme.css';
-@import '../bower_components/slick-lightbox/dist/slick-lightbox.css';
 /* endbower */
 
 .navbar-default {
@@ -208,7 +205,15 @@
 #pro-gallery-modal .modal-dialog {
   max-width: 90%;
   min-width: 80%;
-  max-height: 100%;
+  max-height: 80%;
+  margin: 10% auto;
+}
+
+@media screen and (max-width: 767px) {
+  #pro-gallery-modal .modal-dialog {
+    max-width: 80%;
+    min-width: 70%;
+  }
 }
 
 #pro-gallery-modal .modal-content {
@@ -224,3 +229,36 @@
 #pro-gallery-slick.slick-initialized {
   visibility: visible;
 }
+
+#pro-gallery-slick.slick-initialized .slick-slide {
+  float: none;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#pro-gallery-slick.slick-initialized .slick-slide img {
+  margin: 0 auto;
+}
+
+/*#pro-gallery-slick .slick-track {
+  /*height: 100vh;*
+}
+
+.pro-gallery-slide {
+  text-align: center;
+}
+
+.pro-gallery-slide::before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+}
+
+.pro-gallery-slide img {
+  vertical-align: middle;
+  display: inline-block;
+
+  /*top: 50%;
+  transform: translateY(-50%);*
+}*/
