going back to working on reviews and posts but ran into an error

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,8 @@
 @import '../bower_components/bootstrap/dist/css/bootstrap.css';
 /* endbower */
 
+@import 'spinner.css';
+
 .navbar-default {
   position: fixed;
   background: transparent;
