--- a/styles/main.css
+++ b/styles/main.css
@@ -188,7 +188,7 @@ ul.navbar-nav{
 }
 
 #about-contact {
-  background: url('../images/about-contact/about-postcard.jpg');
+  background: url('../images/about-contact/about-postcard.gif');
   background-repeat: no-repeat;
   background-size: 100%;
   background-size: cover;
