--- a/styles/main.css
+++ b/styles/main.css
@@ -9,7 +9,23 @@ body{
 
 @import 'spinner.css';
 
-
+a{
+  color: #394a59;
+}
+.glyphicon{
+  padding: 20px;
+}
+#contact-text p{
+  padding-top: 6em;
+  font-size: 1.3em; 
+}
+#about-contact h3, #about-contact h4{
+  font-family: "Ubuntu";
+  font-size: 28px;
+  text-align: center;
+  padding: 5px 5px;
+  display: inline-block;
+}
 .navbar-default {
   position: absolute;
     background: transparent;
@@ -158,7 +174,11 @@ ul.navbar-nav{
   background-position: center;
   padding-bottom: 33.25%;
 }
-
+#contact-text{
+  width: 6 0%;
+  padding: 10em 10px 0px;
+  font-size: 1.3em;
+}
 @media screen and (max-width: 768px) {
   .background-image {
     padding-bottom: 56%;
@@ -212,8 +232,9 @@ ul.navbar-nav{
 }*/
 
 #about-contact h3 {
-  margin-top: 70%;  
+  margin-top: 10%;  
 }
+
 
 #facebook-posts {
   padding: 2.5%;
