--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 /* bower:css */
 @import '../bower_components/bootstrap/dist/css/bootstrap.css';
 @import '../bower_components/slick-carousel/slick/slick.css';
+@import '../bower_components/slick-carousel/slick/slick-theme.css';
 /* endbower */
 
 @import '../bower_components/slick-carousel/slick/slick-theme.css';
