--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,7 @@
 
 body{
   font-family: "Ubuntu";
-  background: url(../images/backgrounds/resources-background.jpg);
+  background: url(../images/backgrounds/resources-background.gif);
   background-repeat: repeat;
 }
 
@@ -137,21 +137,52 @@ ul.navbar-nav{
 #reviews {
   /*background: #222222;*/
   /*color: #eeeeee;*/
-  padding: 10% 0;
+  padding: 40px 0;
 }
+
+#reviews .glyphicon {
+  padding: 2px;
+}
+
+/*#guest-book {
+  width: 100%;
+  background: wheat;
+}
+
+#guest-book .page {
+  width: 50%;
+  background: wheat;
+}*/
 
 #reviews blockquote {
   border-left: none;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
 }
 
-#reviews blockquote:before {
+#reviews blockquote * {
+  margin-bottom: 10px;
+}
+
+#reviews blockquote,
+#reviews blockquote footer,
+#reviews blockquote a {
+  color: #f0eccf;
+}
+
+#reviews blockquote p:before {
   content: ' ';
-  display: inline-block;
-  width: 22px;
-  height: 185px;
-  margin-left: 5px;
+  display: block;
+  width: 185px;
+  height: 22px;
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
   vertical-align: top;
-  background: url(../images/hand-drawns/every-tuesday-hand-drawn-decorative-divider-1.gif);
+  background: url(../images/hand-drawns/every-tuesday-hand-drawn-decorative-divider-horizontal-white.gif);
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
@@ -159,12 +190,22 @@ ul.navbar-nav{
 
 #reviews blockquote p {
   display: inline-block;
-  width: calc(100% - 44px);
-  color: wheat;
+  /*width: calc(100% - 44px);*/
+  /*color: wheat;*/
 }
 
 #reviews blockquote footer {
-  text-align: right;
+  /*text-align: right;*/
+}
+
+#yelp-burst {
+  height: 6em;
+}
+
+#facebook-f {
+  padding: 1.5em;
+  height: 6em;
+  width: 6em;
 }
 
 .reviews-slider {
@@ -203,7 +244,8 @@ ul.navbar-nav{
   background: rgba(0, 0, 0, 0.8);
 
   padding: 5%;
-  color: #fff;
+  color: #f0eccf;
+  border-radius: 10px;
 }
 
 .pop-up p {
@@ -237,6 +279,26 @@ ul.navbar-nav{
   background: gray;
   color: white;
   outline: none;
+}
+
+#viewgallery-button {
+  visibility: hidden;
+  position: absolute;
+  display: block;
+  width: 33%;
+  padding-bottom: 65.7%;
+  background-image: url(../images/buttons/view-gallery-trans.gif);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-size: contain;
+  background-position: center;
+  cursor: pointer;
+}
+
+#viewgallery-button:hover,
+#viewgallery-button:focus,
+#viewgallery-button:active {
+  background-image: url(../images/buttons/view-gallery-trans-hover.gif);
 }
 
 #pro-gallery .item img {
@@ -295,32 +357,51 @@ ul.navbar-nav{
 
 
 #facebook-posts {
-  padding: 2.5%;
-  display: block;
+  /*padding: 2.5%;*/
+  margin: 40px 0;
+  padding: 40px;
+  width: 100%;
   text-align: center;
-  background: #222;
-  color: #eee;
+  background: rgba(0, 0, 0, 0.6);
+  color: #f0eccf;
+}
+
+#facebook-posts h2,
+#facebook-posts h3 {
+  margin: 20px;
+}
+
+#facebook-posts a {
+  color: #73a8bf;
 }
 
 .facebook-post {
   display: inline-block;
-  width: 7.5%;
-  padding-bottom: 7.5%;
-  margin: 1.25%;
+  width: 8%;
+  padding-bottom: 8%;
+  margin: 1%;
 
   background-size: 100%;
   background-size: cover;
   background-repeat: no-repeat;
+  cursor: pointer;
+  z-index: -1;
+  transition: transform 0.5s;
+}
+
+.facebook-post:hover {
+  z-index: 1;
+  transform: scale(1.33);
 }
 
 #footer {
-  /*background: #222;*/
-  /*color: white;*/
+  background: #77878d;
+  color: #f0eccf;
   padding: 15px;
 }
 
 #footer a {
-  color: darkred;
+  color: #f6e37d;
 }
 
 #scroll-up{
@@ -328,7 +409,8 @@ ul.navbar-nav{
   z-index: 1000;
   top: 75%;
   right: 35px;
-  font-size: 200%;
+  font-size: 300%;
+  color: #f0eccf;
 }
 
 #scroll-up:hover,
