--- a/styles/main.css
+++ b/styles/main.css
@@ -4,711 +4,16 @@
 @import '../bower_components/slick-carousel/slick/slick-theme.css';
 /* endbower */
 
-@import 'spinner.css';
-
-body{
-  font-family: "Ubuntu";
-  background-image: url(../images/backgrounds/resources-background.gif);
-  background-repeat: repeat;
-}
-
-a {
-  color: #394a59;
-}
-
-.glyphicon {
-  padding: 20px;
-}
-
-
-
-
-#about-contact h3, #about-contact h4 {
-  font-family: "Ubuntu";
-  font-size: 28px;
-  text-align: center;
-  padding: 5px 5px;
-  display: inline-block;
-}
-
-.container {
-  position: relative;
-}
-
-
-.navbar-default {
-  position: absolute;
-  background: transparent;
-  width: 100%;
-  border: none;
-}
-
-.navbar-default .navbar-nav > li > a {
-  color: #394a59;
-  font-size: 30px;
-  font-weight: 400;
-  font-variant: small-caps;
-}
-
-.navbar-default .navbar-nav>.active>a, 
-.navbar-default .navbar-nav>.active>a:focus, 
-.navbar-default .navbar-nav>.active>a:hover{
-  background-color: transparent;
-
-}
-
-.navbar-default .navbar-nav:not(.navbar-right) > li:not(:last-child):after{
-  position: absolute; 
-  display: inline-block;
-  right: -1px;
-  top: 7px;
-  content: "";
-  height:38px;
-  width: 6px;
-  background-image: url(../images/navigation/nav-ornament.png);
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-size: contain;
-}
-.ubuntu-font{
-  font-family: "Ubuntu";
-}
-
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:focus {
-  color: #394a59;
-  background: transparent;
-}
-
-.navbar-default .navbar-nav>.active>a {
-  background-color: none;
-}
-
-.navbar-default .navbar-nav > .active > a:hover{
-  color: #395a58;
-}
-ul.navbar-nav{
-  letter-spacing: 2px;
-  margin: 40px auto;
-}
-
-.navbar-brand {
-  padding: 15px, 15px;
-  position: absolute;
-}
-.nav{
-  padding: 0px;
-}
-
-.navbar-brand img {
-  max-height: 8em;
-}
-
-.navbar .navbar-nav {
-  display: inline-block;
-  float: none;
-  vertical-align: top;
-}
-
-.navbar .navbar-collapse {
-  text-align: center;
-}
-
-.navbar-right {
-  position: absolute;
-  right: 5%;
-}
-
-#hero, #reviews, #info-map {
-  outline: none;
-}
-
-#hero {
-  width: 100%;
-  display: table;
-}
-
-.uil-default-css {
-  margin: 0 auto;
-}
-
-#reviews {
-  /*background: #222222;*/
-  /*color: #eeeeee;*/
-  padding: 40px 0;
-}
-
-#reviews .glyphicon {
-  padding: 2px;
-}
-
-/*#guest-book {
-  width: 100%;
-  background: wheat;
-}
-
-#guest-book .page {
-  width: 50%;
-  background: wheat;
-}*/
-
-#reviews blockquote {
-  border-left: none;
-  text-align: center;
-  background: rgba(0, 0, 0, 0.6);
-  border-radius: 10px;
-  padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
-}
-
-#reviews blockquote * {
-  margin-bottom: 10px;
-}
-
-#reviews blockquote,
-#reviews blockquote footer,
-#reviews blockquote a {
-  color: #f0eccf;
-}
-
-#reviews blockquote p:before {
-  content: ' ';
-  display: block;
-  width: 185px;
-  height: 22px;
-  margin-bottom: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  vertical-align: top;
-  background-image: url(../images/hand-drawns/every-tuesday-hand-drawn-decorative-divider-horizontal-white.gif);
-  background-size: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-#reviews blockquote p {
-  display: inline-block;
-  /*width: calc(100% - 44px);*/
-  /*color: wheat;*/
-}
-
-#reviews blockquote footer {
-  /*text-align: right;*/
-}
-
-#yelp-burst {
-  height: 6em;
-}
-
-#facebook-f {
-  padding: 1.5em;
-  height: 6em;
-  width: 6em;
-}
-
-.reviews-slider {
-  cursor: default;
-  outline: none;
-}
-
-.reviews-slider a {
-  cursor: pointer;
-}
-
-#info-map {
-  position: relative;
-}
-
-#info-map, #about-contact {
-  transform: rotate(2deg);
-}
-
-#pro-gallery {
-  transform: rotate(-2deg);
-}
-
-.map {
-  width: 100%;
-}
-
-.pop-up {
-  position: absolute;
-
-  top: 10%;
-  bottom: 10%;
-  left: 10%;
-  right: 10%;
-
-  background: rgba(0, 0, 0, 0.8);
-
-  padding: 5%;
-  color: #f0eccf;
-  border-radius: 10px;
-}
-
-.pop-up p {
-  font-size: 130%;
-}
-
-.pop-up .glyphicon-remove {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  cursor: pointer;
-}
-
-#pro-gallery {
-  position: relative;
-}
-
-#pro-gallery .btn-viewgallery {
-  position: absolute;
-  border-radius: 0;
-  background: #fff;
-  border: solid 3px gray;
-  font-size: 150%;
-  color: gray;
-  transition: color 0.3s, background 0.3s;
-}
-
-#pro-gallery .btn-viewgallery:hover,
-#pro-gallery .btn-viewgallery:active,
-#pro-gallery .btn-viewgallery:focus {
-  background: gray;
-  color: white;
-  outline: none;
-}
-
-#viewgallery-button {
-  visibility: hidden;
-  position: absolute;
-  display: block;
-  width: 33%;
-  padding-bottom: 65.7%;
-  background-image: url(../images/buttons/view-gallery-trans.gif);
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-size: contain;
-  background-position: center;
-  cursor: pointer;
-}
-
-#viewgallery-button:hover,
-#viewgallery-button:focus,
-#viewgallery-button:active {
-  background-image: url(../images/buttons/view-gallery-trans-hover.gif);
-}
-
-#pro-gallery .item img {
-  width: 60%;
-  margin: 0 auto;
-}
-
-#pro-gallery-modal .modal-dialog {
-  width: 100%;
-}
-
-#pro-gallery-modal .modal-content {
-  max-width: 90%;
-  min-width: 80%;
-  margin: 0 auto;
-}
-
-.modal {
-  display: block;
-  visibility: hidden;
-  height: 0;
-  overflow-y: hidden;
-}
-
-#pro-gallery-slick,
-#pro-gallery-slick .slick-list,
-#pro-gallery-slick .slick-track,
-#pro-gallery-slick .slick-slide {
-  max-height: 100% !important;
-  max-height: 100vh !important;
-  outline: none;
-}
-
-#pro-gallery-modal .slick-slide img {
-  display: block;
-  max-height: 95%;
-  max-height: 95vh;
-  max-width: 90%;
-  margin: 2.5% auto;
-}
-
-.modal.in {
-  height: auto;
-}
-
-.modal.in #close-gallery {
-  visibility: visible;
-}
-
-#pro-gallery-modal #close-gallery {
-  color: white;
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  font-size: 200%;
-  cursor: pointer;
-}
-
-.background-image#oakbluffs-representer {
-  background-image: url('../images/pro-gallery/photo-lighthouse.gif');
-}
-
-.background-image#menemsha-representer {
-  background-image: url('../images/pro-gallery/photo-menemsha-harbor.gif');
-}
-
-.background-image#aquinnah-representer {
-  background-image: url('../images/pro-gallery/photo-sunset.gif');
-}
-
-.background-image#edgartown-representer {
-  background-image: url('../images/pro-gallery/photo-boat.gif');
-}
-
-#about-contact {
-  background-image: url('../images/about-contact/about-postcard.gif');
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-size: cover;
-  background-position: center;
-  padding-bottom: 2em;
-  /*padding-bottom: 63.625%;*/
-}
-
-#about-contact > .row {
-  margin-left: 30px;
-}
-
-#contact-text p {
-  padding: 7em 10px 0px;
-  font-size: 1.3em;
-}
-
-/*#about-contact * {
-  background: transparent;
-}*/
-
-/*#about-contact p {
-  margin-top: 50%;
-  padding-left: 10%;
-  padding-right: 10%;
-  font-size: 150%;
-}*/
-
-/*#about-contact h3 {
-  margin-top: 5%;
-}*/
-
-
-#facebook-posts {
-  /*padding: 2.5%;*/
-  margin-top: 60px;
-  padding: 40px;
-  width: 100%;
-  text-align: center;
-  background: rgba(0, 0, 0, 0.6);
-  color: #f0eccf;
-}
-
-#facebook-posts h2,
-#facebook-posts h3 {
-  margin: 20px;
-}
-
-#facebook-posts a {
-  color: #73a8bf;
-}
-
-.facebook-post {
-  display: inline-block;
-  width: 8%;
-  padding-bottom: 8%;
-  margin: 1%;
-
-  background-size: 100%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  cursor: pointer;
-  z-index: -1;
-  transition: transform 0.5s;
-}
-
-.facebook-post:hover {
-  z-index: 1;
-  transform: scale(1.33);
-}
-
-#footer {
-  background: #77878d;
-  color: #f0eccf;
-  padding: 15px;
-}
-
-#footer a {
-  color: #f6e37d;
-}
-
-#scroll-up{
-  position: fixed;
-  z-index: 1000;
-  top: 75%;
-  right: 35px;
-  font-size: 300%;
-  color: #f0eccf;
-}
-
-#scroll-up:hover,
-#scroll-up:focus,
-#scroll-up:visited {
-  text-decoration: none;
-  outline: none;
-}
-
-/*#pro-gallery-slick .slick-track {
-  /*height: 100vh;*
-}
-
-.pro-gallery-slide {
-  text-align: center;
-}
-
-.pro-gallery-slide::before {
-  content: '';
-  display: inline-block;
-  height: 100%;
-  vertical-align: middle;
-}
-
-.pro-gallery-slide img {
-  vertical-align: middle;
-  display: inline-block;
-
-  /*top: 50%;
-  transform: translateY(-50%);*
-}*/
-
-.text-xs-left { text-align: left; }
-.text-xs-right { text-align: right; }
-.text-xs-center { text-align: center; }
-.text-xs-justify { text-align: justify; }
-
-@media (min-width: 768px) {
-    .text-sm-left { text-align: left; }
-    .text-sm-right { text-align: right; }
-    .text-sm-center { text-align: center; }
-    .text-sm-justify { text-align: justify; }
-}
-
-@media (min-width: 992px) {
-    .text-md-left { text-align: left; }
-    .text-md-right { text-align: right; }
-    .text-md-center { text-align: center; }
-    .text-md-justify { text-align: justify; }
-}
-
-@media (min-width: 1200px) {
-    .text-lg-left { text-align: left; }
-    .text-lg-right { text-align: right; }
-    .text-lg-center { text-align: center; }
-    .text-lg-justify { text-align: justify; }
-}
-
-  
-@media screen and (max-width: 767px) {
-  #pro-gallery-modal .modal-dialog {
-    max-width: 80%;
-    min-width: 70%;
-  }
-  .nav>li {
-    position: static;
-  }
-  .navbar-default .navbar-collapse {
-    border-color: transparent;
-    background-color: rgba(252, 248, 227, 0.8);
-  }
-  .navbar-brand img {
-    max-height: 5em;
-  }
-  .navbar-default .navbar-toggle{
-  background-color: rgba(134, 144, 137, 0.8);
-  border-color: #fcf8e3;
-  }
-  .navbar-toggle{
-    margin-top: 38px;
-    margin-right: 75px;
-    margin-bottom: 18px;
-  }
-  .navbar-default .navbar-toggle:focus, 
-  .navbar-default .navbar-toggle:hover {
-    background-color: #fcf8e3;
-  }
-
-  .background-image#edgartown-representer {
-    padding-bottom: 68.5%;
-  }
-
-  #viewgallery-button {
-    width: 50%;
-  }
-}
-
-#pro-gallery-modal .modal-content {
-  background: transparent;
-  box-shadow: none;
-  border: none;
-}
-
-#pro-gallery-slick,
-.reviews-slider {
-  visibility: hidden;
-  height: 0;
-}
-
-#pro-gallery-slick.slick-initialized,
-.reviews-slider.slick-initialized {
-  visibility: visible;
-  height: auto;
-}
-
-#pro-gallery-slick.slick-initialized .slick-slide {
-  float: none;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.background-image {
-  background-size: 100%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  padding-bottom: 33.25%;
-}
-
-
-/*Small devices (landscape phones, 767px and up)*/
-@media screen and (max-width: 767px) {
-  .background-image {
-    padding-bottom: 56%;
-  }
-  #contact-text{
-    padding: 10em 10px 0px;
-    font-size: .9em;
-    width: 90%;
-    /*left:30px;*/
-}
-#about-contact{
-  background-image: url('../images/about-contact/about-postcard-768.gif') !important;
-  background-position: center !important;
-  background-repeat: no-repeat !important;
-
-
-}
-
-}
-@media screen and (max-width: 991px){
-.navbar-default .navbar-nav>li>a {
-    font-size: 20px;
-  } 
-  .navbar-brand img {
-    max-height: 5em;
-  }
-  #contact-text{
-    padding: 5em 10px 0px;
-    font-size: .8em;
-    width: 90%;
-    /*left:30px;*/
-}
-#about-contact h3, #about-contact h4 {
-  font-size: 17px;
-}
-.glyphicon{
-  padding: 10px;
-}
-
-
-}
-@media screen and (max-width: 1999px){
-.navbar .navbar-nav{
-  font-size: 20px;
-  }
-}
-@media screen and (min-width: 1920px) {
-  .visible-lg{
-    display: none !important;
-  } 
-  .navbar-default .navbar-nav>li>a {
-    font-size: 20px;
-  }  
-}
-@media screen and (max-width: 1921px) {
-  .visible-xlg{
-    display: none !important;
-  }
-}
-@media screen and (min-width: 1920px) {
-  .visible-lg{
-    display: none !important;
-  }
-}
-@media screen and (max-width: 1921px) {
-  .visible-xlg{
-    display: none !important;
-  }
-}
-/*Small devices (landscape phones, 767px and up)*/
-@media screen and (max-width: 767px) {
-  .background-image {
-    padding-bottom: 56%;
-  }
-  #contact-text{
-    padding: 10em 10px 0px;
-    font-size: .9em;
-    width: 90%;
-    /*left:30px;*/
-}
-
-
-}
-@media screen and (max-width: 991px){
-.navbar-default .navbar-nav>li>a {
-    font-size: 20px;
-  } 
-  .navbar-brand img {
-    max-height: 5em;
-  }
-
-  #about-contact > .row {
-    width: 80%;
-    margin: 0 auto;
-  }
-  
-  #contact-text{
-    padding: 9em 10px 0px;
-    font-size: .9em;
-    /*width: 90%;*/
-    /*left:30px;*/
-    
-}
-#about-contact h3, #about-contact h4 {
-  font-size: 17px;
-}
-#about-contact {
-  background-image: url('../images/about-contact/about-postcard.gif');
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-size: contain;
-  background-position: center;
-  /*padding-bottom: 63.625%;*/
-}
-.glyphicon{
-  padding: 10px;
-}
-
-
-}
+@import 'imports/spinner.css';
+@import 'imports/responsive-text-align.css';
+
+@import 'imports/custom.css';
+@import 'imports/navbar.css';
+@import 'imports/hero.css';
+@import 'imports/about-contact.css';
+@import 'imports/reviews.css';
+@import 'imports/info-map.css';
+@import 'imports/pro-gallery.css';
+@import 'imports/facebook-posts.css';
+@import 'imports/footer.css';
+@import 'imports/scroll-up.css';
