Adding flip cards mobile version of info map section.

--- a/styles/imports/custom.css
+++ b/styles/imports/custom.css
@@ -32,6 +32,15 @@ a {
   visibility: visible;
 }
 
+.close-modal {
+  color: white;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-size: 200%;
+  cursor: pointer;
+}
+
 #hero, #reviews, #info-map {
   outline: none;
 }
