--- a/styles/imports/info-map.css
+++ b/styles/imports/info-map.css
@@ -1,6 +1,5 @@
 #info-map {
   position: relative;
-  transform: rotate(2deg);
 }
 
 .map {
@@ -33,6 +32,18 @@
   cursor: pointer;
 }
 
+#flip-cards .back {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: #f0eccf;
+  font-size: 130%;
+  padding: 5%;
+  min-height: 100%;
+}
+
+.card {
+  margin-bottom: 2em;
+}
+
 /*Extra small devices (mobile phones, 767px and below)*/
 @media screen and (max-width: 767px) {
   /* TODO remove if unnecessary */
@@ -40,15 +51,21 @@
 
 /*Small devices (landscape phones, 768px and up)*/
 @media (min-width: 768px) and (max-width: 991px) {
-  /* TODO remove if unnecessary */
+  #info-map {
+    transform: rotate(2deg);
+  }
 }
 
 /*Medium devices (tablets, netbooks, 992px and up)*/
 @media (min-width: 992px) and (max-width: 1199px) {
-  /* TODO remove if unnecessary */
+  #info-map {
+    transform: rotate(2deg);
+  }
 }
 
 /*Large devices (desktops, 1200px and up)*/
 @media (min-width: 1200px) {
-  /* TODO remove if unnecessary */
+  #info-map {
+    transform: rotate(2deg);
+  }
 }
