Fixing GFMV-23 and starting GFMV-24.

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,7 @@
 @import 'imports/navbar.css';
 @import 'imports/hero.css';
 @import 'imports/about-contact.css';
+@import 'imports/call-to-action.css';
 @import 'imports/reviews.css';
 @import 'imports/info-map.css';
 @import 'imports/pro-gallery.css';
