--- a/styles/imports/custom.css
+++ b/styles/imports/custom.css
@@ -2,6 +2,7 @@ body {
   font-family: "Ubuntu";
   background-image: url(../../images/backgrounds/resources-background.gif);
   background-repeat: repeat;
+  overflow-x: hidden;
 }
 
 a {
@@ -83,15 +84,15 @@ a {
 }
 
 @media screen and (min-width: 1919px) {
-  .visible-lg {
+  /*.visible-lg {
     display: none !important;
-  }
+  }*/
   .navbar-default .navbar-nav > li > a {
     font-size: 20px;
   }  
 }
 
-@media screen and (max-width: 1920px) {
+/*@media screen and (max-width: 1920px) {
   .visible-xlg {
     display: none !important;
   }
@@ -107,4 +108,4 @@ a {
   .visible-xlg {
     display: none !important;
   }
-}
+}*/
