--- a/styles/imports/call-to-action.css
+++ b/styles/imports/call-to-action.css
@@ -17,3 +17,13 @@
 .book-now-btn:active {
   background-image: url(../../images/buttons/book-now-trans-hover.gif);
 }
+
+/*Extra small devices (mobile phones, 767px and below)*/
+@media screen and (max-width: 991px) {
+  .book-now-btn.visible-xs.visible-sm {
+    display: inline-block;
+    margin: 0 auto 2em;
+    width: 50%;
+    padding-bottom: 50%;
+  }
+}
