--- a/styles/imports/custom.css
+++ b/styles/imports/custom.css
@@ -64,6 +64,11 @@ a {
   overflow-y: hidden;
 }
 
+.modal.in {
+  height: auto;
+  visibility: visible;
+}
+
 /*Extra small devices (mobile phones, 767px and below)*/
 @media screen and (max-width: 767px) {
   .background-image {
