--- a/styles/main.css
+++ b/styles/main.css
@@ -19,3 +19,5 @@
 @import 'imports/facebook-posts.css';
 @import 'imports/footer.css';
 @import 'imports/scroll-up.css';
+
+@import 'imports/privacy-policy.css';
