--- a/styles/imports/spinner.css
+++ b/styles/imports/spinner.css
@@ -1,113 +1,60 @@
-@-webkit-keyframes uil-default-anim {
+@keyframes lds-ripple {
   0% {
-    opacity: 1
+    top: 96px;
+    left: 96px;
+    width: 0;
+    height: 0;
+    opacity: 1;
   }
   100% {
-    opacity: 0
+    top: 18px;
+    left: 18px;
+    width: 156px;
+    height: 156px;
+    opacity: 0;
   }
 }
-
-@keyframes uil-default-anim {
+@-webkit-keyframes lds-ripple {
   0% {
-    opacity: 1
+    top: 96px;
+    left: 96px;
+    width: 0;
+    height: 0;
+    opacity: 1;
   }
   100% {
-    opacity: 0
+    top: 18px;
+    left: 18px;
+    width: 156px;
+    height: 156px;
+    opacity: 0;
   }
 }
-
-.uil-default-css {
+.lds-ripple {
+  position: relative;
   margin: 0 auto;
 }
-
-.uil-default-css > div:nth-of-type(1) {
-  -webkit-animation: uil-default-anim 1s linear infinite;
-  animation: uil-default-anim 1s linear infinite;
-  -webkit-animation-delay: -1s;
-  animation-delay: -1s;
+.lds-ripple div {
+  box-sizing: content-box;
+  position: absolute;
+  border-width: 4px;
+  border-style: solid;
+  opacity: 1;
+  border-radius: 50%;
+  -webkit-animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
-
-.uil-default-css {
-  position: relative;
-  background: none;
-  width: 200px;
-  height: 200px;
-  transform: scale(0.5);
+.lds-ripple div:nth-child(1) {
+  border-color: #f0eccf;
 }
-
-.uil-default-css > div:nth-of-type(2) {
-  -webkit-animation: uil-default-anim 1s linear infinite;
-  animation: uil-default-anim 1s linear infinite;
-  -webkit-animation-delay: -0.9166666666666666s;
-  animation-delay: -0.9166666666666666s;
-}
-
-.uil-default-css > div:nth-of-type(3) {
-  -webkit-animation: uil-default-anim 1s linear infinite;
-  animation: uil-default-anim 1s linear infinite;
-  -webkit-animation-delay: -0.8333333333333334s;
-  animation-delay: -0.8333333333333334s;
-}
-
-.uil-default-css > div:nth-of-type(4) {
-  -webkit-animation: uil-default-anim 1s linear infinite;
-  animation: uil-default-anim 1s linear infinite;
-  -webkit-animation-delay: -0.75s;
-  animation-delay: -0.75s;
-}
-
-.uil-default-css > div:nth-of-type(5) {
-  -webkit-animation: uil-default-anim 1s linear infinite;
-  animation: uil-default-anim 1s linear infinite;
-  -webkit-animation-delay: -0.6666666666666666s;
-  animation-delay: -0.6666666666666666s;
-}
-
-.uil-default-css > div:nth-of-type(6) {
-  -webkit-animation: uil-default-anim 1s linear infinite;
-  animation: uil-default-anim 1s linear infinite;
-  -webkit-animation-delay: -0.5833333333333334s;
-  animation-delay: -0.5833333333333334s;
-}
-
-.uil-default-css > div:nth-of-type(7) {
-  -webkit-animation: uil-default-anim 1s linear infinite;
-  animation: uil-default-anim 1s linear infinite;
+.lds-ripple div:nth-child(2) {
+  border-color: #abe6f1;
   -webkit-animation-delay: -0.5s;
   animation-delay: -0.5s;
 }
-
-.uil-default-css > div:nth-of-type(8) {
-  -webkit-animation: uil-default-anim 1s linear infinite;
-  animation: uil-default-anim 1s linear infinite;
-  -webkit-animation-delay: -0.4166666666666667s;
-  animation-delay: -0.4166666666666667s;
-}
-
-.uil-default-css > div:nth-of-type(9) {
-  -webkit-animation: uil-default-anim 1s linear infinite;
-  animation: uil-default-anim 1s linear infinite;
-  -webkit-animation-delay: -0.3333333333333333s;
-  animation-delay: -0.3333333333333333s;
-}
-
-.uil-default-css > div:nth-of-type(10) {
-  -webkit-animation: uil-default-anim 1s linear infinite;
-  animation: uil-default-anim 1s linear infinite;
-  -webkit-animation-delay: -0.25s;
-  animation-delay: -0.25s;
-}
-
-.uil-default-css > div:nth-of-type(11) {
-  -webkit-animation: uil-default-anim 1s linear infinite;
-  animation: uil-default-anim 1s linear infinite;
-  -webkit-animation-delay: -0.16666666666666666s;
-  animation-delay: -0.16666666666666666s;
-}
-
-.uil-default-css > div:nth-of-type(12) {
-  -webkit-animation: uil-default-anim 1s linear infinite;
-  animation: uil-default-anim 1s linear infinite;
-  -webkit-animation-delay: -0.08333333333333333s;
-  animation-delay: -0.08333333333333333s;
+.lds-ripple {
+  width: 200px !important;
+  height: 200px !important;
+  -webkit-transform: translate(-100px, -100px) scale(1) translate(100px, 100px);
+  transform: translate(-100px, -100px) scale(1) translate(100px, 100px);
 }
